fixed flickering icon

--- a/root/thruk/themes/Thruk/stylesheets/Thruk.css
+++ b/root/thruk/themes/Thruk/stylesheets/Thruk.css
@@ -55,7 +55,7 @@
 }
 
 .filter_button_mini {
-  left:-7px;
+  left:-8px;
   position:relative;
   top:-3px;
 }
